--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
+    "dompurify": "^3.1.6",
     "firebase": "^10.12.5",
     "fs-extra": "^11.2.0",
     "react": "^18.3.1",
