--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^5.1.1",
+    "devicon": "^2.16.0",
+    "devicons-react": "^1.3.0",
     "dompurify": "^3.1.6",
     "firebase": "^10.12.5",
     "fs-extra": "^11.2.0",
@@ -18,7 +20,8 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "tinymce": "^7.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
